--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>AJAX Information API Application</h1>
+<input type="text" name="searchTerm" value="JavaScript">
 <input type="button" id="search" value="search">
 <div id="output"></div>
 
@@ -15,7 +16,9 @@
     };
 
     function showResults() {
-        var url = "https://randomuser.me/api";
+        var searchTerm = document.querySelector("input[name='searchTerm']").value;
+        var url = "https://www.mediawiki.org/w/api.php?" +
+            "format=json&action=opensearch&origin=*&search="+searchTerm;
         ajaxJS(url, function (response) {
             console.log(response);
         })
