YouTube API with JS

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 output.innerHTML += '<div class="dataOutput">' + holder + '</div>';
             }
         })
+        // AIzaSyD4kC2GdSj3zFCU6TnmrmN1escVWhrtg2Y
+        // https://www.googleapis.com/youtube/v3/search/?part=snippet&key=AIzaSyD4kC2GdSj3zFCU6TnmrmN1escVWhrtg2Y&q=test&maxResults=10
+
     }
 
     function ajaxJS(url, callback) {
