--- a/index.html
+++ b/index.html
@@ -8,13 +8,45 @@
             padding: 10px;
             border: 1px solid #eee;
         }
+
+        .wrap {
+            width: 100%;
+            position: relative;
+        }
+
+        .panel {
+            width: 25%;
+            display: inline-block;
+            height: 120px;
+            overflow: hidden;
+        }
+
+        .panel img {
+            width: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+        .panel .content {
+            width: 100%;
+            font-size: 0.7em;
+            background: rgb(0, 0, 0);
+            background: rgba(0, 0, 0, 0.6);
+            color: white;
+            position: absolute;
+            padding: 10px;
+            left: 0;
+            z-index: 100;
+        }
     </style>
 </head>
 <body>
 <h1>AJAX Information API Application</h1>
 <input type="text" name="searchTerm" value="JavaScript">
 <input type="button" id="search" value="search">
-<div id="output"></div>
+<div id="outputWiki"></div>
+<div id="outputYoutube"></div>
 
 <script>
     window.onload = function () {
@@ -24,25 +56,32 @@
     function showResults() {
         var searchTerm = document.querySelector("input[name='searchTerm']").value;
         var url = "https://www.mediawiki.org/w/api.php?" +
-            "format=json&action=opensearch&origin=*&search="+searchTerm;
-        var output = document.querySelector("#output");
-        output.innerHTML = "<h2>Search Term " + searchTerm + "</h2>";
-        /*ajaxJS(url, function (response) {
+            "format=json&action=opensearch&origin=*&search=" + searchTerm;
+        var outputWiki = document.querySelector('#outputWiki');
+        var outputYoutube = document.querySelector('#outputYoutube');
+        outputWiki.innerHTML = "<h2>Search Term " + searchTerm + "</h2>";
+        ajaxJS(url, function (response) {
 
             for(var x in response) {
                 var holder = typeof response[x] == 'string' ? response[x] : response[x][0];
-                output.innerHTML += '<div class="dataOutput">' + holder + '</div>';
+                outputWiki.innerHTML += '<div class="dataOutput">' + holder + '</div>';
             }
-        });*/
-        var url1 = 'https://www.googleapis.com/youtube/v3/search/?part=snippet&key=AIzaSyD4kC2GdSj3zFCU6TnmrmN1escVWhrtg2Y&q=test&maxResults=10';
-        ajaxJS(url1, function(data){
+        });
+        var url1 = 'https://www.googleapis.com/youtube/v3/search/?part=snippet&key=AIzaSyD4kC2GdSj3zFCU6TnmrmN1escVWhrtg2Y&q=' + searchTerm + '&maxResults=10';
+        ajaxJS(url1, function (data) {
             for (var x in data.items) {
                 console.log(data.items[x]);
                 var title = data.items[x].snippet.title;
                 var desc = data.items[x].snippet.description;
                 var thumb = data.items[x].snippet.thumbnails.default.url;
+                var videoID = data.items[x].id.videoId;
 
-                output.innerHTML += '<div>'+title+'<br>'+desc+'<br>'+thumb+'</div>';
+                outputYoutube.innerHTML += '<div class="panel">' +
+                    '<div class="wrap">' +
+                    '<div class="content">' + title + '</div>' +
+                    '<a href="https://youtu.be/' + videoID + '" target="_blank">' +
+                    '<img src="' + thumb + '" alt="' + title + '"></a></div></div>'
+
             }
         })
     }
